plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.0-SNAPSHOT'
	id 'io.spring.dependency-management' version '1.1.3'
}

group = 'art.vas'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17.PREVIEW'
	targetCompatibility = '17.PREVIEW'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
	maven { url 'https://repo.spring.io/snapshot' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	implementation 'org.telegram:telegrambots:6.8.0'
	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
	implementation 'javax.xml.bind:jaxb-api:2.3.1'
//	implementation 'com.vladmihalcea:hibernate-types-52:2.21.1'
	implementation 'org.apache.commons:commons-collections4:4.4'
	implementation 'org.jsoup:jsoup:1.16.2'
	implementation 'com.google.guava:guava:32.1.3-jre'
}
//tasks.withType(JavaCompile).each {
//	it.options.compilerArgs.add('--enable-preview')
//}
compileJava {
	options.compilerArgs += ['--enable-preview']
}
tasks.withType(JavaExec) {
	jvmArgs += '--enable-preview'
}
